Use JDK17 features